{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 51,
  "lineage": "eaf7e596-6f1b-be2d-3ff6-0e3d76feddf0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e34af9d3686f9ace",
            "arn": "arn:aws:ec2:ap-south-1:446421363083:instance/i-0bed53b2dd722d1da",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bed53b2dd722d1da",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "By_Terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e960678da115b91",
            "private_dns": "ip-10-0-1-231.ap-south-1.compute.internal",
            "private_ip": "10.0.1.231",
            "public_ip": "13.233.123.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03721ee80c5a37f93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00a21077e07b5624b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05aadfabc3fac5410",
            "tags": {
              "Name": "My-Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00a21077e07b5624b"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:446421363083:internet-gateway/igw-0eeeaf5426e9d3688",
            "id": "igw-0eeeaf5426e9d3688",
            "owner_id": "446421363083",
            "tags": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0fd4edfdbb59812e1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0060916e3691c26d6",
            "owner_id": "446421363083",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eeeaf5426e9d3688",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "vpc_id": "vpc-0fd4edfdbb59812e1"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e3187d5c39fddeb",
            "route_table_id": "rtb-0060916e3691c26d6",
            "subnet_id": "subnet-05aadfabc3fac5410"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:446421363083:security-group/sg-00a21077e07b5624b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00a21077e07b5624b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20201003180532607400000001",
            "name_prefix": "",
            "owner_id": "446421363083",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4edfdbb59812e1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:446421363083:subnet/subnet-05aadfabc3fac5410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05aadfabc3fac5410",
            "map_public_ip_on_launch": false,
            "owner_id": "446421363083",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0fd4edfdbb59812e1"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:446421363083:vpc/vpc-0fd4edfdbb59812e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ffc5c26a1ea396a",
            "default_route_table_id": "rtb-03a2a2d4254683507",
            "default_security_group_id": "sg-0ecdc7c7065cff379",
            "dhcp_options_id": "dopt-034865964273cd3cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fd4edfdbb59812e1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a2a2d4254683507",
            "owner_id": "446421363083",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}